--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div id="cuentaRegresiva"></div>
-    <div class="Baile">
+    <div class="noel">
         <div id="noelquieto" class="noelOff">
             <div class="noelOnOff" onclick="play()">play</div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html> #3200220
